--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div
               class="u-container-layout u-similar-container u-valign-top u-container-layout-2"
             >
-            <img src="/images/Logo - 3.svg" alt="">
+            <img src="/images/Untitled design (2).png" alt="">
               <!-- <span class="u-icon u-icon-circle u-palette-4-base u-icon-2"
                 ><svg
                   class="u-svg-link"
@@ -255,7 +255,7 @@
                   ></path></svg
               ></span> -->
               <h4 class="u-custom-font u-text u-text-3" style="text-align: center;">
-                State Govt. <b>Approved</b>
+                ISO <b>Certified</b>
               </h4>
               <!-- <p class="u-text u-text-4">
                 The Sikkim Global Technical University (SGTU) established under
@@ -271,7 +271,7 @@
             <div
               class="u-container-layout u-similar-container u-valign-top u-container-layout-3"
             >
-            <img src="/images/Logo - 3.svg" alt="">
+            <img src="/images/Untitled design (1).png" alt="">
               <!-- <span class="u-icon u-icon-circle u-palette-4-base u-icon-3"
                 ><svg
                   class="u-svg-link"
@@ -337,7 +337,7 @@
             <div
               class="u-container-layout u-similar-container u-valign-top u-container-layout-4"
             >
-            <img src="/images/Logo - 3.svg" alt="">
+            <img src="/images/2.png" alt="">
               <!-- <span class="u-icon u-icon-circle u-palette-4-base u-icon-4"
                 ><svg
                   class="u-svg-link"
